Added some helper functions and a button on the portal to have the bot join the VC the user is in